Update sonar.